[package]
name = "bovidae"
version = "0.2.3"
edition = "2021"
authors = ["Niland Schumacher <naschuma@ucsc.edu>"]
description = "Yet another LALR(1) parser generator"
homepage = "https://github.com/nilandasd/bovidae"
include = ["/src"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
